background white space fix
fix the bar on the right

--- a/SherpaDesk/css/style.css
+++ b/SherpaDesk/css/style.css
@@ -36,6 +36,7 @@ body, html {
   position: relative;
   overflow: hidden;*/
   height: 100%;
+  margin-left: -3px;
 }
 
 strong {
@@ -208,6 +209,7 @@ strong {
 
 .bodyContent {
   margin-top: 45px;
+  max-width: 450px;
 }
 
 .bodyContentDark {
@@ -346,6 +348,7 @@ header {
   height: 45px;
   position: fixed;
   width: 100%;
+  max-width: 450px;
   top: 0;
   z-index: 2;
 }
